--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bottom_nav_home">မူလ</string>
     <string name="bottom_nav_history">မှတ်တမ်း</string>
-    <string name="error_empty_locatin_data_list">Empty location data list</string>
+    <string name="error_empty_locatin_data_list">No Location Data To Display</string>
 </resources>
